Fix proposal status card colors (increase contrast) (#42)

--- a/app/assets/stylesheets/uoc/partials/_cards.scss
+++ b/app/assets/stylesheets/uoc/partials/_cards.scss
@@ -4,6 +4,8 @@
   border-radius: 0;
 
   .card__text--status {
-    background-color: $gray-dark;
+    background-color: $body-font-color;
+    padding: 3px;
+    margin-right: 5px;
   }
 }
